# myshell

./: CMakeLists.txt  CommandPart.cpp  CommandPart.h  README.md  filef.c  filef.h  main.cpp  mycat.c  redirectsParser.h  system_read_write.cpp  wildcards.cpp  wildcards.h
include/: CommandPart.h  redirectsParser.h  system_read_write.h
mycat/: filef.h
myls/: myls.cpp
src/: CommandPart.cpp  main.cpp  redirectsParser.cpp  system_read_write.cpp
